--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@panter/vue-i18next": "^0.15.0",
-    "@processmaker/modeler": "^0.7.2",
     "@processmaker/processmaker-bpmn-moddle": "^0.2.0",
+    "@processmaker/spark-modeler": "^0.9.0",
     "@processmaker/spark-screen-builder": "^0.12.1",
     "@processmaker/vue-form-elements": "^0.5.0",
     "@tinymce/tinymce-vue": "^1.0.8",
