--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
       - run: sudo docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
       - run: sudo docker-php-ext-install -j$(nproc) gd
       - run: sudo docker-php-ext-install -j$(nproc) pcntl
+      - run: sudo docker-php-ext-install -j$(nproc) exif
 
       # Install MS SQL PDO Extension dependency
       - run:
