--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
 
       - run:
           name: "SauceLabs Browser Tests: Chrome"
-          command: "ssh -o "StrictHostKeyChecking no" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php artisan dusk\""
+          command: "ssh -o \"StrictHostKeyChecking no\" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php artisan dusk\""
           environment:
             DB_DATABASE: "circle_test"
             RUN_MSSQL_TESTS: "true"
@@ -239,7 +239,7 @@ jobs:
 
       - run:
           name: "SauceLabs Browser Tests: Firefox"
-          command: "ssh -o "StrictHostKeyChecking no" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
+          command: "ssh -o \"StrictHostKeyChecking no\" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
           environment:
             SAUCELABS_BROWSER: "firefox"
             SAUCELABS_PLATFORM: "Windows 10"
@@ -247,7 +247,7 @@ jobs:
 
       - run:
           name: "SauceLabs Browser Tests: Edge"
-          command: "ssh -o "StrictHostKeyChecking no" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
+          command: "ssh -o \"StrictHostKeyChecking no\" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
           environment:
             SAUCELABS_BROWSER: "MicrosoftEdge"
             SAUCELABS_PLATFORM: "Windows 10"
@@ -255,7 +255,7 @@ jobs:
 
       - run:
           name: "SauceLabs Browser Tests: Safari"
-          command: "ssh -o "StrictHostKeyChecking no" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
+          command: "ssh -o \"StrictHostKeyChecking no\" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
           environment:
             SAUCELABS_BROWSER: "safari"
             SAUCELABS_PLATFORM: "macOS 10.13"
@@ -263,4 +263,4 @@ jobs:
 
       - run:
           name: "Final QA Artisan DB Migration"
-          command: "ssh -o "StrictHostKeyChecking no" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force\""
+          command: "ssh -o \"StrictHostKeyChecking no\" -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-sparkbuilds \"php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force\""
