--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "timezones.json": "^1.4.4",
     "tooltip.js": "^1.2.0",
     "v-tooltip": "^2.0.0-rc.33",
-    "vue-croppie": "^1.3.12",
+    "vue-croppie": "1.3.12",
     "vue-deepset": "^0.6.3",
     "vue-events": "^3.1.0",
     "vue-json-pretty": "^1.4.1-beta.1",
