--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.21",
     "accounting": "^0.4.1",
-    "axios": "^0.15.3",
+    "axios": ">=0.19.0",
     "babel-jest": "^22.4.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
