Tests circleci with sql server DATA connection

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,14 @@ jobs:
             DB_DATABASE: "circle_test"
             DB_PASSWORD: "P4ssW0rd1!"
             DB_USERNAME: "root"
-            RUN_MSSQL_TESTS: "true"
+            ENABLE_EXTERNAL_CONNECTION: "true"
+            DATA_DB_DRIVER: "sqlsrv"
+            DATA_DB_HOST: "127.0.0.1"
+            DATA_DB_PORT: "1433"
+            DATA_DB_DATABASE: "test"
+            DATA_DB_USERNAME: "sa"
+            DATA_DB_PASSWORD: "P4ssW0rd1!"
+            RUN_MSSQL_TESTS: "false"
             MSSQL_HOST: "127.0.0.1"
             MSSQL_PORT: "1433"
             MSSQL_DATABASE: "test"
