Config circleci ms sql data connection

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,10 +147,10 @@ jobs:
             DATA_DB_DRIVER: "sqlsrv"
             DATA_DB_HOST: "127.0.0.1"
             DATA_DB_PORT: "1433"
-            DATA_DB_DATABASE: "test"
+            DATA_DB_DATABASE: "userexternal"
             DATA_DB_USERNAME: "sa"
             DATA_DB_PASSWORD: "P4ssW0rd1!"
-            RUN_MSSQL_TESTS: "false"
+            RUN_MSSQL_TESTS: "true"
             MSSQL_HOST: "127.0.0.1"
             MSSQL_PORT: "1433"
             MSSQL_DATABASE: "test"
