Modify package references

--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@panter/vue-i18next": "^0.15.0",
     "@processmaker/processmaker-bpmn-moddle": "^0.4.1",
-    "@processmaker/spark-modeler": "^0.15.4",
-    "@processmaker/spark-screen-builder": "^0.16.2",
-    "@processmaker/vue-form-elements": "^0.10.1",
+    "@processmaker/spark-modeler": "ProcessMaker/spark-modeler#bugfix\/425\/inspector-height",
+    "@processmaker/spark-screen-builder": "ProcessMaker/spark-screen-builder#qa-june-11",
+    "@processmaker/vue-form-elements": "ProcessMaker/vue-form-elements#bugfix\/233-checkbox-state",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.3.1",
