Ädd scheduling flag to enable the artisan scheduling cron for the spark local site.

--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -26,6 +26,7 @@ sites:
     -
         map: spark.local.processmaker.com
         to: /home/vagrant/processmaker/public
+        schedule: true
 databases:
     - spark
     - test
