--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
     "mockery/mockery": "^1.0",
     "nunomaduro/collision": "^2.0",
     "phpunit/phpunit": "^7.0",
-    "squizlabs/php_codesniffer": "^3.0.2"
+    "squizlabs/php_codesniffer": "^3.0.2",
+    "symfony/dom-crawler": "^4.3"
   },
   "autoload": {
     "classmap": [
