Renaming spark->processmaker

--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -7,7 +7,7 @@ DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=
-APP_URL=https://spark.local.processmaker.com
+APP_URL=https://processmaker.local.processmaker.com
 
 SAUCELABS_BROWSER_TESTING=false
 SAUCELABS_USERNAME=processmaker
