--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "processmaker/spark",
+  "name": "processmaker/processmaker",
   "version": "4.0.0",
   "description": "BPM PHP Software",
   "keywords": [
@@ -16,7 +16,7 @@
     },
     {
       "type": "vcs",
-      "url": "https://github.com/ProcessMaker/spark-connector-send-email.git"
+      "url": "https://github.com/ProcessMaker/connector-send-email.git"
     }
   ],
   "require": {
