--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@panter/vue-i18next": "^0.15.0",
     "@processmaker/processmaker-bpmn-moddle": "^0.4.1",
-    "@processmaker/modeler": "^0.15.5",
+    "@processmaker/processmaker-modeler": "^0.15.5",
     "@processmaker/processmaker-screen-builder": "^0.16.3",
     "@processmaker/vue-form-elements": "^0.10.2",
     "babel-eslint": "^10.0.1",
