fix labels text

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_DEBUG=FALSE
-APP_NAME="ProcessMaker Processmaker"
+APP_NAME="ProcessMaker"
 APP_ENV=production
 APP_KEY=
 BROADCAST_DRIVER=redis
