--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "processmaker/spark",
+  "name": "processmaker/processmaker",
   "version": "4.0.0",
   "description": "BPM PHP Software",
   "keywords": [
