rename project name to processmaker, in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "processmaker/processmaker",
+  "name": "processmaker",
   "version": "4.0.0",
   "description": "BPM PHP Software",
   "keywords": [
@@ -17,6 +17,22 @@
     {
       "type": "vcs",
       "url": "https://github.com/ProcessMaker/connector-send-email.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ProcessMaker/packages.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ProcessMaker/package-collections.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ProcessMaker/package-translations.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ProcessMaker/package-vocabularies.git"
     }
   ],
   "require": {
@@ -40,6 +56,10 @@
     "processmaker/laravel-i18next": "dev-master",
     "processmaker/nayra": "dev-master",
     "processmaker/pmql": "dev-master",
+    "processmaker/packages": "*",
+    "processmaker/package-collections": "*",
+    "processmaker/package-translations": "*",
+    "processmaker/package-vocabularies": "*",
     "ralouphie/getallheaders": "^2.0",
     "spatie/laravel-fractal": "^5.3",
     "spatie/laravel-medialibrary": "^7.0.0",
