--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@panter/vue-i18next": "^0.15.0",
     "@processmaker/processmaker-bpmn-moddle": "^0.4.1",
-    "@processmaker/spark-modeler": "^0.15.5",
-    "@processmaker/screen-builder": "^0.17.2",
-    "@processmaker/vue-form-elements": "^0.10.2",
+    "@processmaker/modeler": "^0.15.8",
+    "@processmaker/screen-builder": "^0.17.3",
+    "@processmaker/vue-form-elements": "^0.10.3",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.3.1",
