--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vue": "^2.5.17",
     "vue-jest": "^2.6.0",
     "vue-uniq-ids": "^1.0.0",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "sass-loader": "^7.0.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
