Register helper method

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,18 @@
   "prefer-stable": true,
   "repositories": [
     {
+      "type": "path",
+      "url": "../package-collections"
+    },
+    {
+      "type": "path",
+      "url": "../package-savedsearch"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ProcessMaker/packages.git"
+    },
+    {
       "type": "vcs",
       "url": "https://github.com/ProcessMaker/laravel-chunk-upload"
     },
@@ -39,6 +51,8 @@
     "predis/predis": "^1.1",
     "processmaker/laravel-i18next": "dev-master",
     "processmaker/nayra": "dev-master",
+    "processmaker/package-collections": "^1.0",
+    "processmaker/package-savedsearch": "^0.0.1",
     "processmaker/pmql": "dev-master",
     "ralouphie/getallheaders": "^2.0",
     "spatie/laravel-fractal": "^5.3",
@@ -59,6 +73,9 @@
     "symfony/dom-crawler": "^4.3"
   },
   "autoload": {
+    "files": [
+      "ProcessMaker/Helper/helper.php"
+    ],
     "classmap": [
       "database/seeds",
       "database/factories"
