--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": ">=7.2.0",
-    "TYPO3/class-alias-loader": "^1.0",
+    "typo3/class-alias-loader": "^1.0",
     "darkaonline/l5-swagger": "5.7.*",
     "doctrine/dbal": "^2.5",
     "fideloper/proxy": "^4.0",
@@ -67,7 +67,9 @@
       "database/factories"
     ],
     "psr-4": {
-      "ProcessMaker\\": ["ProcessMaker/"]
+      "ProcessMaker\\": [
+        "ProcessMaker/"
+      ]
     }
   },
   "autoload-dev": {
