--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -13,9 +13,12 @@ folders:
         to: /home/vagrant/processmaker
 # Uncomment and modify the following if you want to
 # link a local directory for package development
-#    -
-#        map: '../processmaker-plugins'
-#        to: /home/vagrant/processmaker-plugins
+    -
+        map: '../packages'
+        to: /home/vagrant/packages
+    -
+        map: '../sitetest'
+        to: /home/vagrant/sitetest
 #
 # Uncomment and modify the following if you want to
 # link a local directory for nayra (workflow engine) development
@@ -27,8 +30,14 @@ sites:
         map: processmaker.local.processmaker.com
         to: /home/vagrant/processmaker/public
         schedule: true
+    -
+        map: sitetest.local.processmaker.com
+        to: /home/vagrant/sitetest/public
+        schedule: true
 databases:
     - processmaker
     - test
+    - sitetest
+    - sitetest_test
 name: processmaker
 hostname: processmaker
