--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -5,8 +5,8 @@ APP_KEY=base64:15X/NLJiQvUFrSEvutCRtN4M+sgARUjb7Wra/9FjyOw=
 DB_HOSTNAME=localhost
 DB_PORT=3306
 DB_DATABASE=test
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 APP_URL=https://processmaker.local.processmaker.com
 
 SAUCELABS_BROWSER_TESTING=false
