--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^3.2.4",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^11.0.0",
