--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@panter/vue-i18next": "^0.15.0",
-    "@processmaker/processmaker-bpmn-moddle": "^0.4.2",
     "@processmaker/modeler": "^0.15.11",
+    "@processmaker/processmaker-bpmn-moddle": "^0.4.2",
     "@processmaker/screen-builder": "^0.17.7",
     "@processmaker/vue-form-elements": "^0.10.4",
     "babel-eslint": "^10.0.1",
@@ -81,6 +81,7 @@
     "timezones.json": "^1.4.4",
     "tooltip.js": "^1.2.0",
     "v-tooltip": "^2.0.0-rc.33",
+    "verte": "0.0.12",
     "vue-croppie": "1.3.12",
     "vue-deepset": "^0.6.3",
     "vue-events": "^3.1.0",
