--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^3.2.4",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^11.0.0",
@@ -44,6 +43,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "copy-webpack-plugin": "4.0.0",
     "@babel/runtime": "^7.3.1",
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
