--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,26 +143,26 @@ jobs:
 
       # run tests!
       - run:
-          name: "PHPUnit"
-          command: "./vendor/bin/phpunit -v -d memory_limit=-1"
+          name: 'PHPUnit'
+          command: './vendor/bin/phpunit -v -d memory_limit=-1'
           environment:
-            DB_DATABASE: "circle_test"
-            DB_PASSWORD: "P4ssW0rd1!"
-            DB_USERNAME: "root"
-            DATA_DB_DRIVER: "sqlsrv"
-            DATA_DB_HOST: "127.0.0.1"
-            DATA_DB_PORT: "1433"
-            DATA_DB_DATABASE: "test"
-            DATA_DB_USERNAME: "sa"
-            DATA_DB_PASSWORD: "P4ssW0rd1!"
-            RUN_MSSQL_TESTS: "true"
-            MSSQL_HOST: "127.0.0.1"
-            MSSQL_PORT: "1433"
-            MSSQL_DATABASE: "test"
-            MSSQL_USERNAME: "sa"
-            MSSQL_PASSWORD: "P4ssW0rd1!"
-            PROCESSMAKER_SCRIPTS_HOME: "/opt/executor"
-            PROCESSMAKER_SCRIPTS_DOCKER_MODE: "copying"
+            DB_DATABASE: 'circle_test'
+            DB_PASSWORD: 'P4ssW0rd1!'
+            DB_USERNAME: 'root'
+            DATA_DB_DRIVER: 'sqlsrv'
+            DATA_DB_HOST: '127.0.0.1'
+            DATA_DB_PORT: '1433'
+            DATA_DB_DATABASE: 'test'
+            DATA_DB_USERNAME: 'sa'
+            DATA_DB_PASSWORD: 'P4ssW0rd1!'
+            RUN_MSSQL_TESTS: 'true'
+            MSSQL_HOST: '127.0.0.1'
+            MSSQL_PORT: '1433'
+            MSSQL_DATABASE: 'test'
+            MSSQL_USERNAME: 'sa'
+            MSSQL_PASSWORD: 'P4ssW0rd1!'
+            PROCESSMAKER_SCRIPTS_HOME: '/opt/executor'
+            PROCESSMAKER_SCRIPTS_DOCKER_MODE: 'copying'
       - run:
           name: 'Jest'
           command: 'npm run test'
@@ -210,6 +210,22 @@ jobs:
             echo "LARAVEL_ECHO_SERVER_AUTH_HOST=%%AUTHHOST%%" >> .env
             echo "LARAVEL_ECHO_SERVER_PORT=%%ECHOPORT%%" >> .env
             echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env
+
+            echo "APP_KEY=" >> .env.dusk.staging
+            echo "APP_DEBUG=FALSE" >> .env.dusk.staging
+            echo "APP_NAME=ProcessMaker" >> .env.dusk.staging
+            echo "APP_ENV=staging" >> .env.dusk.staging
+            echo "DB_HOSTNAME=${QA_RDS_HOST}" >> .env.dusk.staging
+            echo "DB_DATABASE=${QA_DB_NAME}" >> .env.dusk.staging
+            echo "DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
+            echo "DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
+            echo "DATA_DB_DRIVER=mysql" >> .env.dusk.staging
+            echo "DATA_DB_HOST=${QA_RDS_HOST}" >> .env.dusk.staging
+            echo "DATA_DB_DATABASE=${QA_DATA_DB_NAME}" >> .env.dusk.staging
+            echo "DATA_DB_PORT=3306" >> .env.dusk.staging
+            echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
+            echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
+            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging        
 
             # Generate unique app key
             php artisan key:generate --force
