--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "copy-webpack-plugin": "4.0.0",
     "@babel/runtime": "^7.3.1",
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
@@ -59,6 +58,7 @@
     "bootstrap-vue": "^2.0.0-rc.22",
     "bpmn-moddle": "^5.1.5",
     "chart.js": "^2.7.2",
+    "copy-webpack-plugin": "4.0.0",
     "country-json": "^1.0.7",
     "eslint": "^4.19.1",
     "i18next": "^15.0.8",
@@ -82,7 +82,7 @@
     "timezones.json": "^1.4.4",
     "tooltip.js": "^1.2.0",
     "v-tooltip": "^2.0.0-rc.33",
-    "verte": "0.0.12",
+    "vue-color": "^2.7.0",
     "vue-croppie": "1.3.12",
     "vue-deepset": "^0.6.3",
     "vue-events": "^3.1.0",
