--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,7 @@ jobs:
             docker pull processmaker4/executor-php:latest
             docker pull processmaker4/executor-lua:latest
             docker pull processmaker4/executor-node:latest
+            docker pull jbergknoff/sass:latest
             sudo mkdir -m777 /opt/executor
 
       #- run: sudo docker-php-ext-enable xdebug
@@ -222,7 +223,7 @@ jobs:
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
-            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging 
+            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -236,7 +237,7 @@ jobs:
             echo "HOME=/home/circleci" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_AUTH_HOST=%%AUTHHOST%%" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_PORT=%%ECHOPORT%%" >> .env.dusk.staging
-            echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env.dusk.staging           
+            echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env.dusk.staging
 
             # Generate unique app key
             php artisan key:generate --force
