--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             echo 'export BUILD_NAME=$(echo "$CIRCLE_BRANCH" | tr /. -)' >> $BASH_ENV
             echo 'export QA_DB_NAME=$(echo "processmaker$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
             echo 'export QA_DATA_DB_NAME=$(echo "processmaker_data$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
+            echo 'export QA_DUSK_DB_NAME=$(echo "processmaker_dusk$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
             source $BASH_ENV
 
       - run:
@@ -222,7 +223,14 @@ jobs:
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
-            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging 
+            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging
+            # Configuration for the connection to dusk database
+            echo "DUSK_DB_DRIVER=mysql" >> .env.dusk.staging
+            echo "DUSK_DB_HOST=${QA_RDS_HOST}" >> .env.dusk.staging
+            echo "DUSK_DB_DATABASE=${QA_DUSK_DB_NAME}" >> .env.dusk.staging
+            echo "DUSK_DB_PORT=3306" >> .env.dusk.staging
+            echo "DUSK_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
+            echo "DUSK_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging 
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -250,8 +258,8 @@ jobs:
       - run:
           name: 'QA Deploy'
           command: |
-            # Delete existing target QA directory, if it exists
-            ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm -Rf ~/builds/$BUILD_NAME"
+            # Delete existing target QA directory, if it existsqa-processmakerbuilds
+            ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p"  "rm -Rf ~/builds/$BUILD_NAME"
             # Create new target QA directory
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mkdir ~/builds/$BUILD_NAME"
             # Copy over packaged qa deployment
@@ -264,6 +272,7 @@ jobs:
             # Create MYSQL Database
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DB_NAME}\""
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DATA_DB_NAME}\""
+            ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DUSK_DB_NAME}\""
             # Run php artisan migrate:fresh --seed to have a clean installed database in RDS
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force"
             # Setup Media Link
