--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ jobs:
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
             echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging
-            # Configuration for the connection to dusk database
+            # Configuration for the connection to the new database 
             echo "DUSK_DB_DRIVER=mysql" >> .env.dusk.staging
             echo "DUSK_DB_HOST=${QA_RDS_HOST}" >> .env.dusk.staging
             echo "DUSK_DB_DATABASE=${QA_DUSK_DB_NAME}" >> .env.dusk.staging
