--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ jobs:
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
-            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging 
+            echo "APP_URL=https://feature-2189.bpm4.qa.processmaker.net" >> .env.dusk.staging 
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -274,7 +274,6 @@ jobs:
           name: 'SauceLabs Browser Tests: Firefox'
           command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
           environment:
-            APP_URL: 'https://develop.bpm4.qa.processmaker.net'
             SAUCELABS_BROWSER: 'firefox'
             SAUCELABS_PLATFORM: 'Windows 10'
             SAUCELABS_BROWSER_VERSION: '47.0'
@@ -283,7 +282,6 @@ jobs:
           name: 'SauceLabs Browser Tests: Edge'
           command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
           environment:
-            APP_URL: 'https://develop.bpm4.qa.processmaker.net'
             SAUCELABS_BROWSER: 'MicrosoftEdge'
             SAUCELABS_PLATFORM: 'Windows 10'
             SAUCELABS_BROWSER_VERSION: '16.16299'
@@ -292,7 +290,6 @@ jobs:
           name: 'SauceLabs Browser Tests: Safari'
           command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
           environment:
-            APP_URL: 'https://develop.bpm4.qa.processmaker.net'
             SAUCELABS_BROWSER: 'safari'
             SAUCELABS_PLATFORM: 'macOS 10.13'
             SAUCELABS_BROWSER_VERSION: '11.0'
